--- a/UI/index.html
+++ b/UI/index.html
@@ -6,11 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>My Diary | Welcome</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Chela+One|Dancing+Script" rel="stylesheet">
 </head>
 <body>
     <div class="container">
         <h1>My Diary</h1>
-        <p>Express Yourself</p>
+        <hr>
+        <p>Express Your thoughts and feelings</p>
         <form action="">
             <button class="button"><a href="#">Login</a></button>
             <button class="button"><a href="#">Sign Up</a></button>
