[Feature #158954695] Changes Login text to Sign In

--- a/UI/index.html
+++ b/UI/index.html
@@ -14,7 +14,7 @@
         <hr>
         <p>Express Your thoughts and feelings</p>
         <form action="">
-            <button class="button"><a href="#">Login</a></button>
+            <button class="button"><a href="#">Sign In</a></button>
             <button class="button"><a href="#">Sign Up</a></button>
         </form>
     </div>
