--- a/UI/index.html
+++ b/UI/index.html
@@ -14,8 +14,8 @@
         <hr>
         <p>Express Your thoughts and feelings</p>
         <form action="">
-            <button class="button"><a href="#">Sign In</a></button>
-            <button class="button"><a href="#">Sign Up</a></button>
+            <button class="button"><a href="signin.html">Sign In</a></button>
+            <button class="button"><a href="signup.html">Sign Up</a></button>
         </form>
     </div>
     
