[Feature #158954695] Added an id to the paragraph within container
^X

--- a/UI/index.html
+++ b/UI/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <h1>My Diary</h1>
         <hr>
-        <p>Express Your thoughts and feelings</p>
+        <p id="slogan">Express Your thoughts and feelings</p>
         <form action="">
             <button class="button"><a href="signin.html">Sign In</a></button>
             <button class="button"><a href="signup.html">Sign Up</a></button>
