[Feature #158952362] Added class to the table and modified it to fit the page

--- a/UI/diary-entries.html
+++ b/UI/diary-entries.html
@@ -27,25 +27,27 @@
                 <h1> Diary Entries</h1>
                 <div class="entries">
                     <!-- ENTRIES TABLE -->
-                    <table>
-                        <tr>
-                            <td><a href="">Entry 1</a></td>
-                            <td><a href="">View</a></td>
-                            <td><a href="">Modify</a></td>
-                            <td><a href="">Delete</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Entry 2</a></td>
-                            <td><a href="">View</a></td>
-                            <td><a href="">Modify</a></td>
-                            <td><a href="">Delete</a></td>
-                        </tr>
-                        <tr>
-                            <td><a href="">Entry 2</a></td>
-                            <td><a href="">View</a></td>
-                            <td><a href="">Modify</a></td>
-                            <td><a href="">Delete</a></td>
-                        </tr>
+                    <table class="entriestable">
+                        <tbody>
+                            <tr>
+                                <td><a href="">Diary Entry Title 1</a></td>
+                                <td><a href="">View</a></td>
+                                <td><a href="">Modify</a></td>
+                                <td><a href="">Delete</a></td>
+                            </tr>
+                            <tr>
+                                <td><a href="">Diary Entry Title 2</a></td>
+                                <td><a href="">View</a></td>
+                                <td><a href="">Modify</a></td>
+                                <td><a href="">Delete</a></td>
+                            </tr>
+                            <tr>
+                                <td><a href="">Diary Entry Title 3</a></td>
+                                <td><a href="">View</a></td>
+                                <td><a href="">Modify</a></td>
+                                <td><a href="">Delete</a></td>
+                            </tr>
+                        </tbody>    
                     </table>
                 </div>
             </div>
