--- a/UI/new-entry.html
+++ b/UI/new-entry.html
@@ -18,7 +18,7 @@
                 <ul>                
                     <li><a href="">Home</a></li>
                     <li><a href="diary-entries.html">View Entries</a></li>
-                    <li><a href="">My profile</a></li>  
+                    <li><a href="profile.html">My profile</a></li>  
                     <li><a href="">Logout</a></li>               
                 </ul>
             </div>   
