--- a/UI/diary-entries.html
+++ b/UI/diary-entries.html
@@ -16,7 +16,7 @@
             <div class="side-menu">
                 <h1>Menu</h1>
                 <ul>                
-                    <li><a href="">Home</a></li>
+                    <li><a href="new-entry.html">New Entry</a></li>
                     <li><a href="diary-entries.html">View Entries</a></li>
                     <li><a href="profile.html">My profile</a></li>  
                     <li><a href="">Logout</a></li>               
