[Feature #158952362] Removed link on the title of every entry

--- a/UI/diary-entries.html
+++ b/UI/diary-entries.html
@@ -27,22 +27,22 @@
                 <h1> Diary Entries</h1>
                 <div class="entries">
                     <!-- ENTRIES TABLE -->
-                    <table class="entriestable">
+                    <table class="entriestable">                        
                         <tbody>
                             <tr>
-                                <td><a href="">Diary Entry Title 1</a></td>
+                                <td>Diary Entry Title 1</td>
                                 <td><a href="">View</a></td>
                                 <td><a href="">Modify</a></td>
                                 <td><a href="">Delete</a></td>
                             </tr>
                             <tr>
-                                <td><a href="">Diary Entry Title 2</a></td>
+                                <td>Diary Entry Title 2</td>
                                 <td><a href="">View</a></td>
                                 <td><a href="">Modify</a></td>
                                 <td><a href="">Delete</a></td>
                             </tr>
                             <tr>
-                                <td><a href="">Diary Entry Title 3</a></td>
+                                <td>Diary Entry Title 3</td>
                                 <td><a href="">View</a></td>
                                 <td><a href="">Modify</a></td>
                                 <td><a href="">Delete</a></td>
