[Feature #158952362] Added links to the view and modify content

--- a/UI/diary-entries.html
+++ b/UI/diary-entries.html
@@ -31,20 +31,20 @@
                         <tbody>
                             <tr>
                                 <td>Diary Entry Title 1</td>
-                                <td><a href="">View</a></td>
-                                <td><a href="">Modify</a></td>
+                                <td><a href="entry.html">View</a></td>
+                                <td><a href="new-entry.html">Modify</a></td>
                                 <td><a href="">Delete</a></td>
                             </tr>
                             <tr>
                                 <td>Diary Entry Title 2</td>
-                                <td><a href="">View</a></td>
-                                <td><a href="">Modify</a></td>
+                                <td><a href="entry.html">View</a></td>
+                                <td><a href="new-entry.html">Modify</a></td>
                                 <td><a href="">Delete</a></td>
                             </tr>
                             <tr>
                                 <td>Diary Entry Title 3</td>
-                                <td><a href="">View</a></td>
-                                <td><a href="">Modify</a></td>
+                                <td><a href="entry.html">View</a></td>
+                                <td><a href="new-entry.html">Modify</a></td>
                                 <td><a href="">Delete</a></td>
                             </tr>
                         </tbody>    
