--- a/UI/profile.html
+++ b/UI/profile.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Chela+One|Dancing+Script" rel="stylesheet">
-    <title>Diary Entries</title>
+    <title>User Profile</title>
 </head>
 <body>
 <div class="container">
