[Chore #159004831] Adding a profile link button on the home page

--- a/UI/index.html
+++ b/UI/index.html
@@ -16,6 +16,8 @@
         <form action="">
             <button class="button"><a href="signin.html">Sign In</a></button>
             <button class="button"><a href="signup.html">Sign Up</a></button>
+            <button class="button"><a href="profile.html">My Profile</a></button>
+            
         </form>
     </div>
     
