[Feature #158952531] Adding an article link to the paragraphs

--- a/UI/entry.html
+++ b/UI/entry.html
@@ -23,11 +23,13 @@
             </div>   
             <!--DIARY ENTRY FORM -->
             <div class="view-entry">
-                <h1>Diary Entry 1</h1>                
-                <p>Posted on <span> Thursday, July 2018. </span> By <span>Kelvin Kitika</span> </p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, ducimus debitis quam cum fuga tenetur necessitatibus tempore veritatis nemo aliquid, inventore quis? Quaerat laboriosam iure ratione odit non velit ex.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam autem voluptas fugit voluptatum ea nulla. Eum dolore delectus ipsam. Dignissimos, culpa dolorem id iusto fuga eius et corporis similique minima.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia inventore deleniti fuga vitae iusto doloribus repellat, consequuntur, velit impedit rerum nam odit quia, sapiente vero quisquam quibusdam? Nesciunt, quaerat nostrum.</p>
+                <h1>Diary Entry 1</h1> 
+                <article>             
+                    <p>Posted on <span> Thursday, July 2018. </span> By <span>Kelvin Kitika</span> </p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, ducimus debitis quam cum fuga tenetur necessitatibus tempore veritatis nemo aliquid, inventore quis? Quaerat laboriosam iure ratione odit non velit ex.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam autem voluptas fugit voluptatum ea nulla. Eum dolore delectus ipsam. Dignissimos, culpa dolorem id iusto fuga eius et corporis similique minima.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia inventore deleniti fuga vitae iusto doloribus repellat, consequuntur, velit impedit rerum nam odit quia, sapiente vero quisquam quibusdam? Nesciunt, quaerat nostrum.</p>
+                </article>       
             </div> 
         </div>     
     </div>
