[Chore #159019647] change button tags to link tags and add class button

--- a/UI/profile.html
+++ b/UI/profile.html
@@ -45,8 +45,10 @@
                         <label for="reminder settings">Enable Daily Reminders</label>
                         <input type="checkbox" name="reminder" id="reminder">
                     </div> 
-                    <button class="button"><a href="">Save</a></button> 
-                    <button class="button"><a href="">Discard</a></button>                                   
+                    <div class="user-button">
+                        <a href="" class="button">Save</a>
+                        <a href="" class="button">Discard</a>  
+                    </div>                                                    
                 </form>
             </div>
         </div>     
