[Chore #159019647] change button tags to link tags and add class button

--- a/UI/index.html
+++ b/UI/index.html
@@ -14,9 +14,9 @@
         <hr>
         <p id="slogan">Express Your thoughts and feelings</p>
         <form action="">
-            <button class="button"><a href="signin.html">Sign In</a></button>
-            <button class="button"><a href="signup.html">Sign Up</a></button>
-            <button class="button"><a href="profile.html">My Profile</a></button>
+            <a href="signin.html" class="button">Sign In</a>
+            <a href="signup.html" class="button">Sign Up</a>
+            <a href="profile.html" class="button">My Profile</a>
             
         </form>
     </div>
