[Chore #159019647] change button tags to link tags and add class button

--- a/UI/new-entry.html
+++ b/UI/new-entry.html
@@ -34,8 +34,8 @@
                     <div class="input">
                         <textarea name="diary-entry" id="text-area" cols="40" rows="20" placeholder="Enter your Story..."></textarea>
                     </div>
-                    <button class="button"><a href="">Add Story</a></button>
-                    <button class="button"><a href="">Discard</a></button>
+                    <a href="" class="button">Add Story</a>
+                    <a href="" class="button">Discard</a>
                 </form>
             </div> 
         </div>     
