Remove Myprofile from homepage

--- a/UI/index.html
+++ b/UI/index.html
@@ -13,12 +13,11 @@
         <h1>My Diary</h1>
         <hr>
         <p id="slogan">Express Your thoughts and feelings</p>
-        <div action="">
+        <form action="">
             <a href="signin.html" class="button">Sign In</a>
-            <a href="signup.html" class="button">Sign Up</a>
-            <a href="profile.html" class="button">My Profile</a>
+            <a href="signup.html" class="button">Sign Up</a>       
             
-        </div>
+        </form>
     </div>
     
 </body>
