--- a/UI/signup.html
+++ b/UI/signup.html
@@ -15,26 +15,28 @@
                         <h1>Sign Up</h1>
                         <form action="" class="signup-form">
                             <div class="input">               
-                                <input type="text" placeholder="First Name">
+                                <input type="text" placeholder="Name" name="name">
                             </div>
                             <div class="input">               
-                                <input type="text" placeholder="Last Name">
+                                <input type="text" placeholder="Username" name="username">
                             </div>
                             <div class="input">
-                                <input type="email" placeholder="Email"> 
+                                <input type="email" placeholder="Email" name="email"> 
                             </div> 
                             <div class="input">               
-                                <input type="password" placeholder="Password">
+                                <input type="password" placeholder="Password" name="password">
                             </div>
                             <div class="input">               
                                 <input type="password" placeholder="Confirm Password">
                             </div>
                             <div class="signup-submit">                                                    
-                                <button type="button" class="button">Submit</button>
+                                <button type="submit" class="button">Submit</button>
                             </div>     
-                        </form>
+                        </form>                    
+                    <p>Don't want to sign up? Go back <a href="index.html">home</a></p>                  
                     </div>
         </div>
     </div>
+    <script src="js/script.js"></script>
 </body>
 </html>
