--- a/UI/signin.html
+++ b/UI/signin.html
@@ -15,13 +15,13 @@
                 <h1>Sign In</h1>
                 <form action="" class="signin-form">
                     <div class="input">
-                        <input type="email" placeholder="Email"> 
+                        <input type="text" placeholder="Username" name="username"> 
                     </div> 
                     <div class="input">               
-                        <input type="password" placeholder="Password">
+                        <input type="password" placeholder="Password" name="password">
                     </div>
                     <div class="signin-submit">                                                    
-                        <button type="button" class="button">Submit</button>
+                        <button type="submit" class="button">Submit</button>
                     </div>     
                 </form>
             </div>
