--- a/UI/signup.html
+++ b/UI/signup.html
@@ -13,7 +13,8 @@
         <div class="wrapper">
                 <div class="signup">
                         <h1>Sign Up</h1>
-                        <form action="" class="signup-form">
+                        <p id="signup-message"></p>  
+                        <form onsubmit="signUp()" class="signup-form">
                             <div class="input">               
                                 <input type="text" placeholder="Name" name="name">
                             </div>
@@ -32,8 +33,9 @@
                             <div class="signup-submit">                                                    
                                 <button type="submit" class="button">Submit</button>
                             </div>     
-                        </form>                    
-                    <p>Don't want to sign up? Go back <a href="index.html">home</a></p>                  
+                        </form>
+                                          
+                    <p>Don't want to sign up? Go back <a href="index.html">Home</a> or <a href="signin.html">Sign in</a></p>                  
                     </div>
         </div>
     </div>
