Add fetch for signin

--- a/UI/signin.html
+++ b/UI/signin.html
@@ -13,6 +13,7 @@
         <div class="wrapper">
             <div class="signin">
                 <h1>Sign In</h1>
+                <p id="signin-message"></p> 
                 <form action="" class="signin-form">
                     <div class="input">
                         <input type="text" placeholder="Username" name="username"> 
@@ -21,12 +22,13 @@
                         <input type="password" placeholder="Password" name="password">
                     </div>
                     <div class="signin-submit">                                                    
-                        <button type="submit" class="button">Submit</button>
+                        <button type="submit" class="button" >Submit</button>
                     </div>     
                 </form>
             </div>
             <p>New User? Create your account <a href="signup.html">here</a></p>
         </div>    
     </div>
+    <script src="js/signin.js"></script>
 </body>
 </html>
