Add Fetch JS for registration

--- a/UI/signup.html
+++ b/UI/signup.html
@@ -14,7 +14,7 @@
                 <div class="signup">
                         <h1>Sign Up</h1>
                         <p id="signup-message"></p>  
-                        <form onsubmit="signUp()" class="signup-form">
+                        <form class="signup-form">
                             <div class="input">               
                                 <input type="text" placeholder="Name" name="name">
                             </div>
@@ -39,6 +39,6 @@
                     </div>
         </div>
     </div>
-    <script src="js/script.js"></script>
+    <script src="js/signup.js"></script>
 </body>
 </html>
