--- a/UI/diary-entries.html
+++ b/UI/diary-entries.html
@@ -27,8 +27,7 @@
                 <h1> Diary Entries</h1>
                 <div class="entries">
                     <!-- ENTRIES TABLE -->
-                    <table class="entriestable">                        
-                        <tbody>
+                    <table class="entriestable">
                             <tr>
                                 <td>Diary Entry Title 1</td>
                                 <td><a href="entry.html">View</a></td>
@@ -47,13 +46,12 @@
                                 <td><a href="new-entry.html">Modify</a></td>
                                 <td><a href="">Delete</a></td>
                             </tr>
-                        </tbody>    
                     </table>
                 </div>
             </div>
         </div>     
     </div>
 </div>
-    
+ <script src="js/entries.js"></script>   
 </body>
 </html>
